--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,26 @@
-<nav class="navbar fixed-bottom navbar-light bg-light">
-{%- if site.show-style-guide %}
-    <a href="{{ site.baseurl }}{% link style-guide/index.md %}" class="btn">Style Guide</a>
-{%- endif %}
-</nav>
+<footer class="footer">
+    <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-12 col-lg-4 col-md-4">
+                 <img src="images/logo.png" alt="responsive image" class="img-fluid logo_nav">
+            </div>
+            <div class="col-12 col-lg-4 col-md-4">
+                <ul>
+                    <li>Marthe De Boeck</li>
+                    <li>Vrijstraat 42</li>
+                    <li>9200 Appels</li>
+                    <li>0473/62.37.80</li>
+                </ul>
+            </div>
+            <div class="col-12 col-lg-4 col-md-4">
+                <ul>
+                    <li><a href="home.html" alt="link product">Home</a></li>
+                    <li><a href="bestelpagina.html" alt="link over ons">Bestellen</a></li>
+                    <li><a href="overons.html" alt="link over ons">Over ons</a></li>
+                </ul>
+            </div>
+         </div>
+    </div>
+</footer>
+
+  
