--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
 <footer class="footer">
     <div class="container">
         <div class="row justify-content-center text-center">
@@ -5,7 +7,7 @@
                  <img src="images/logo.png" alt="responsive image" class="img-fluid logo_nav">
             </div>
             <div class="col-12 col-lg-4 col-md-4">
-                <ul>
+                <ul class="info_footer list_footer">
                     <li>Marthe De Boeck</li>
                     <li>Vrijstraat 42</li>
                     <li>9200 Appels</li>
@@ -13,10 +15,14 @@
                 </ul>
             </div>
             <div class="col-12 col-lg-4 col-md-4">
-                <ul>
-                    <li><a href="home.html" alt="link product">Home</a></li>
+                <ul class="list_footer">
+                    <li><a href="index.html" alt="link product">Home</a></li>
                     <li><a href="bestelpagina.html" alt="link over ons">Bestellen</a></li>
                     <li><a href="overons.html" alt="link over ons">Over ons</a></li>
+                    <li><a href="www.facebook.com" target="blank"><i class="fab fa-facebook-square"></i></a>
+                        <a href="www.instagram.com" target="blank"><i class="fab fa-instagram"></i></a>
+                        <a href="www.twitter.com" target="blank"><i class="fab fa-twitter-square"></i></a>
+                    </li>
                 </ul>
             </div>
          </div>
