--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,21 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="responsive image" class="img-fluid logo_nav"></a>
+<nav class="navbar navbar-expand-lg">
+   <div class="container">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" class="img-fluid logo_nav"></a>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-     </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="bestelpagina.html">Bestellen</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="overons.html">Over ons</a>
-          </li>
-      </ul>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+             <li class="nav-item active">
+                 <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="bestelpagina.html">Bestellen</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="overons.html">Over ons</a>
+              </li>
+          </ul>
+      </div>
     </div>
 </nav>
