--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,11 +2,11 @@
 
 <footer class="footer">
     <div class="container">
-        <div class="row justify-content-center text-center">
+        <div class="row justify-content-center text-center align-self-center">
             <div class="col-12 col-lg-4 col-md-4">
-                 <img src="images/logo.png" alt="responsive image" class="img-fluid logo_nav">
+                 <a href="index.html"><img src="images/logo.png" alt="responsive image" class="img-fluid logo_footer"></a>
             </div>
-            <div class="col-12 col-lg-4 col-md-4">
+            <div class="col-12 col-lg-4 col-md-4 align-self-center">
                 <ul class="info_footer list_footer">
                     <li>Marthe De Boeck</li>
                     <li>Vrijstraat 42</li>
@@ -14,14 +14,14 @@
                     <li>0473/62.37.80</li>
                 </ul>
             </div>
-            <div class="col-12 col-lg-4 col-md-4">
+            <div class="col-12 col-lg-4 col-md-4 align-self-center">
                 <ul class="list_footer">
                     <li><a href="index.html" alt="link product">Home</a></li>
                     <li><a href="bestelpagina.html" alt="link over ons">Bestellen</a></li>
                     <li><a href="overons.html" alt="link over ons">Over ons</a></li>
-                    <li><a href="www.facebook.com" target="blank"><i class="fab fa-facebook-square"></i></a>
-                        <a href="www.instagram.com" target="blank"><i class="fab fa-instagram"></i></a>
-                        <a href="www.twitter.com" target="blank"><i class="fab fa-twitter-square"></i></a>
+                    <li><a href="www.facebook.com" target="blank"><i class="fab fa-facebook-square icons"></i></a>
+                        <a href="www.instagram.com" target="blank"><i class="fab fa-instagram icons"></i></a>
+                        <a href="www.twitter.com" target="blank"><i class="fab fa-twitter-square icons"></i></a>
                     </li>
                 </ul>
             </div>
