--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,9 +2,9 @@
    <div class="container">
       <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" class="img-fluid logo_nav"></a>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
+      <p><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          menu
+      </button></p>
 
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
