--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
 <footer class="footer">
     <div class="container">
-        <div class="row align-self-center">
+        <div class="row row justify-content-center text-center">
             <div class="col-12 col-lg-6 col-md-6">
                 <ul class="info_footer list_footer">
                     <li>Marthe De Boeck</li>
@@ -13,9 +13,9 @@
             </div>
             <div class="col-12 col-lg-6 col-md-6">
                 <ul class="list_footer">
-                    <li><a href="index.html" alt="link product">Home</a></li>
-                    <li><a href="bestelpagina.html" alt="link over ons">Bestellen</a></li>
-                    <li><a href="overons.html" alt="link over ons">Over ons</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="bestelpagina.html" class="active">Bestellen</a></li>
+                    <li><a href="overons.html" class="active">Over ons</a></li>
                     <li><a href="https://www.facebook.com/" target="blank"><i class="fab fa-facebook-square icons"></i></a>
                         <a href="https://www.instagram.com/" target="blank"><i class="fab fa-instagram icons"></i></a>
                         <a href="https://twitter.com/" target="blank"><i class="fab fa-twitter-square icons"></i></a>
